--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ azure-ai-agents==1.1.0b4
 python-dotenv==1.1.1
 requests==2.32.4
 beautifulsoup4
+mcp>=1.0.0
+azure-storage-blob>=12.15.0
+python-docx>=1.1.0
+reportlab>=4.0.0
+markdown>=3.5.0
